--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,6 @@
-<!-- /backend/public/index.html -->
-<!DOCTYPE html>
+<!-- /public/index.html -->
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>API</title>
-  </head>
-  <body>
-    <p>API is deployed. Try <code>/.netlify/functions/api/health</code>.</p>
-  </body>
+  <head><meta charset="utf-8"><title>API</title></head>
+  <body><p>API deployed. Try <code>/.netlify/functions/ping</code> or <code>/.netlify/functions/api/health</code>.</p></body>
 </html>
